# Lab_ordenamientos_grup_4

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  guardar.csv
include/: lib1.h  lib_grx.h
src/: files_ops1.c  funciones_grx.c  main.c
